feat: Update page title and metadata
Refines the page title and metadata description to be more descriptive and user-friendly.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sip & Split - เครื่องคิดเลขหารบิล</title>
+    <title>Sip & Split | ช่วยเคลียร์บิลค่าใช้จ่ายง่ายๆ ไม่ต้องหารเท่า</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
       tailwind.config = {
