feat: Add favicon to Sip & Split
Includes an SVG favicon for the application, improving its visual identity in browser tabs and bookmarks.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sip & Split | ช่วยเคลียร์บิลค่าใช้จ่ายง่ายๆ ไม่ต้องหารเท่า</title>
+    <link rel="icon" href="data:image/svg+xml,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%2024%2024%22%20fill%3D%22%23D0FF00%22%3E%3Cpath%20d%3D%22M18%2C6V4H6V6H18M18%2C8H6V20H18V8M20%2C20C20%2C21.1%2019.1%2C22%2018%2C22H6C4.9%2C22%204%2C21.1%204%2C20V8C4%2C6.9%204.9%2C6%206%2C6H8V4C8%2C2.9%208.9%2C2%2010%2C2H16C17.1%2C2%2018%2C2.9%2018%2C4V6H20C21.1%2C6%2022%2C6.9%2022%2C8V20C22%2C21.1%2021.1%2C22%2020%2C22Z%22%2F%3E%3C%2Fsvg%3E">
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
       tailwind.config = {
