refactor: Enhance UI and UX with visual improvements
This commit introduces several UI and UX enhancements:

- Updated favicon to a new SVG for a refreshed look.
- Increased icon sizes in various components (LinkIcon, PencilSquareIcon, TrashIcon, ArrowRightIcon) for better touch targets and visual prominence.
- Adjusted spacing and padding in list items and buttons for improved readability and interaction.
- Modified the Summary card to use the primary color for a more prominent display of the overall summary.
- Changed secondary background color to a darker shade for better contrast.
- Ensured better text hierarchy and contrast for key information.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sip & Split | ช่วยเคลียร์บิลค่าใช้จ่ายง่ายๆ ไม่ต้องหารเท่า</title>
-    <link rel="icon" href="data:image/svg+xml,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%2024%2024%22%20fill%3D%22%23D0FF00%22%3E%3Cpath%20d%3D%22M21%205V3H3v2l8%209v5H6v2h12v-2h-5v-5l8-9zM7.43%207L5.66%205h12.69l-1.78%202H7.43z%22%2F%3E%3C%2Fsvg%3E">
+    <link rel="icon" href="data:image/svg+xml,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%2024%2024%22%20fill%3D%22%23D0FF00%22%3E%3Cpath%20d%3D%22M11%202l-2%202-2-2L5%204l2%202-2%202v2h голосоватьh12V8l-2-2%202-2-2-2-2%202-2-2zm0%208H5v11h14V10h-8z%22%2F%3E%3C%2Fsvg%3E">
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
       tailwind.config = {
@@ -12,7 +12,7 @@
           extend: {
             colors: {
               primary: '#D0FF00',
-              secondary: '#333333',
+              secondary: '#1A1A1A',
               background: '#1A1A1A',
               surface: '#2C2C2C',
               'text-primary': '#F5F5F5',
